# http2-load-generator

./: Cargo.toml  README.md  config-mdd.yaml  config.yaml  get_docker_average_cpu.py
.github/workflows/: build.yml
src/: config.rs  error.rs  event_loop.rs  function.rs  http_api.rs  main.rs  runner.rs  scenario.rs  script.rs  stats.rs  variable.rs
src/scripting/: mod.rs
