[package]
name = "http2-load-generator"
version = "0.0.5"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
h2 = "0.4"
http = "1"
log = "0.4"
env_logger = { version = "0.10", default-features = false }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
humantime = "2.1.0"
bytes = "1.6.0"
rand = "0.8"
